# queens_solver

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: streamlit_app.py  streamlit_app_v2.py  streamlit_app_v4.py
examples/: board7.txt  queens_app.py  queens_solver.py
src/queens/: __init__.py  cli.py  solver.py
src/queens/vision/: image_parser.py  palette_utils.py
src/queens_game.egg-info/: SOURCES.txt
src/queens_solver.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_solver.py
